various backend changes and updates
