# backend/routes/orderroutes.js
@@ -8,6 +8,7 @@ const router = express.Router();
 
 router.get('/orders', authenticate, authorize(['cooker', 'admin']), orderController.getOrders);
 router.get('/order/:id', authenticate, authorize(['server', 'cooker', 'admin']), orderController.getOrderById);
+router.get('/order/table/:tableId', authenticate, authorize(['server', 'cooker', 'admin']), orderController.getOrderByTableNum);
 
 router.post('/order', authenticate, authorize(['server']), orderController.createOrder);
 
